--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - images/icons/Hostel.png
     - images/icons/Transport.png
     - images/icons/Book.png
+    - images/icons/tselogo2.png
+    - images/icons/menus.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
